--- a/home/.inputrc
+++ b/home/.inputrc
@@ -6,10 +6,12 @@ set keymap vi-command
 # these are for vi-command mode
 "\e[A": history-search-backward
 "\e[B": history-search-forward
+"\C-a": beginning-of-line
+"\C-e": end-of-line
 set keymap vi-insert
 # these are for vi-insert mode
 "\e[A": history-search-backward
 "\e[B": history-search-forward
-"^A": beginning-of-line
-"^E": end-of-line
+"\C-a": beginning-of-line
+"\C-e": end-of-line
 $endif
