--- a/home/.ackrc
+++ b/home/.ackrc
@@ -8,6 +8,8 @@
 --nobbl
 
 --ignore-file=is:correction_list.lyx
+--ignore-file=is:correction_list.txt
+
 --ignore-file=is:make.log
 --ignore-file=is:make.log.00
 --ignore-file=is:PR-B.lyx
